Aggiunto un title con v-bind

--- a/index.html
+++ b/index.html
@@ -21,6 +21,13 @@
                     <a href="#" @click="toggleColor" class="btn btn-success mt-2">{{ button_color }}</a>
                 </div>
             </div>
+            <div class="row">
+                <div class="col-sm-12 mt-5">
+                    <h3 v-bind:title="hover_message" class="text-primary">
+                        Fermati qui sopra con il mouse!
+                    </h3>
+                </div>
+            </div>
         </div>
     </div>
     <script src="main.js"></script>
